# spdx-diff

./: CHANGELOG.md  INSTALL.md  README.md  pyproject.toml
src/: spdx-diff
src/spdx_diff/: cli.py
tests/: helper.py  source_test_local_src.sh  test_package.py
