[project]
name = "spdx-diff"
dynamic = ["version"]
description = "SPDX3 SBOM comparison tool for packages, kernel config, and PACKAGECONFIG"
readme = "README.md"
license = {text = "GPL-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Kamel BOUHARA", email = "kamel.bouhara@bootlin.com"}
]
keywords = ["spdx", "sbom", "yocto", "embedded", "linux", "kernel", "packageconfig"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "backports.zstd; python_version < '3.14'"
]

[project.scripts]
spdx-diff = "spdx_diff.cli:main"

[project.urls]
Repository = "https://github.com/bootlin/spdx-diff"
Documentation = "https://github.com/bootlin/spdx-diff/blob/main/README.md"
"Bug Tracker" = "https://github.com/bootlin/spdx-diff/issues"
Changelog = "https://github.com/bootlin/spdx-diff/blob/main/CHANGELOG.md"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff==0.14.14",
    "mypy>=1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/spdx_diff/__init__.py"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/spdx_diff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "YTT",      # flake8-2020
    "ANN",      # flake8-annotations
    "BLE",      # flake8-blind-except
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "PIE",      # flake8-pie
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "SLOT",     # flake8-slots
    "PTH",      # flake8-use-pathlib
    "FLY",      # flynt
    "I",        # isort
    "N",        # pep8-naming
    "PERF",     # Perflint
    "E",        # pycodestyle
    "W",        # pycodestyle
    "F",        # Pyflakes
    "PL",       # Pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # Ruff-specific rules
    "TRY",      # tryceratops
    "D",
]
ignore = [
    "ANN401",   # any-type
    "COM812",   # missing-trailing-comma
    "D203",     # incorrect-blank-line-before-class
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "UP009",    # utf8-encoding-declaration
    "TRY003",   # raise-vanilla-args
    "D100",     # undocumented-public-module
    "D104",     # undocumented-public-package
    "D105",     # undocumented-magic-method
    "D200",     # unnecessary-multiline-docstring
    "D212",     # multi-line-summary-first-line
    "D401",     # non-imperative-mood
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
strict = true

[tool.coverage.run]
patch = ["subprocess"]
